--- a/app/index.html
+++ b/app/index.html
@@ -2,13 +2,9 @@
 <html lang="cn">
 <head>
   <meta charset="utf-8">
-  <title>React</title>
+  <title>杭州市</title>
 </head>
 <body>
-
-
-
-   
   <div class="root" id="root"></div>
   <!-- <%= '<script src="'+ htmlWebpackPlugin.options.mapConfig +'"></script>' %> -->
 </body>
